--- a/particles.html
+++ b/particles.html
@@ -2,11 +2,17 @@
 <html lang="en"> 
 <meta charset="utf-8"> 
 	<head>
-	<title> Particles!</title>
+	<title>Fireworks!</title>
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	</head>
 	
 	<body>
-		<script src="js/particles.js"></script>
+        <h1>Fireworks!</h1>
+		<script src="js/Drawable.js"></script>
+		<script src="js/Star.js"></script>
+		<script src="js/Stars.js"></script>
+		<script src="js/Ball.js"></script>
+		<script src="js/Balls.js"></script>
+		<script src="js/Fireworks.js"></script>
 	</body>
 </html>
